# SeqProcessor

./: README.md  pyproject.toml
seqprocessor/: main.py  options.py  utils.py
seqprocessor/mutation/: aamutation.py  mutation.py
seqprocessor/seq/: align.py  info.py  phylo.py  pretreat.py  translate.py
tests/: jev.fas  jev.xlsx  jeva_genebank.xlsx  test1.fas
